apps/ext/nextcloud/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud
  namespace: ext
subsets:
- addresses:
  - ip: 10.0.0.10
  ports:
  - name: app
    port: 9001
    protocol: TCP
