apps/ext/nextcloud/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: ext
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 9001
  clusterIP: None
  type: ClusterIP
