apps/ext/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: ext
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: cloud.${dns_suffix:=absolutist.it}
    http:
      paths:
      - backend:
          service:
            name: nextcloud
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: cloud.${dns_suffix2:=wahoo.li}
    http:
      paths:
      - backend:
          service:
            name: nextcloud
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - secretName: tls-nextcloud-ingress
